# Raiton

./: CMakeLists.txt  README.md
Resources/Data/: stage1.txt
UserSettings/: UserSettings.ini
src/: controller.cpp  controller.h  enemy.cpp  enemy.h  enemyBullet.cpp  enemyBullet.h  entity.cpp  entity.h  game.cpp  game.h  hitbox.h  main.cpp  player.cpp  player.h  playerBullet.cpp  playerBullet.h  renderer.cpp  renderer.h  shotPattern.h  spawn.h  stage.cpp  stage.h  stageState.h  userSettings.cpp  userSettings.h
